# kernelboost

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
benchmarks/: breast_cancer_benchmark.py  california_housing_benchmark.py  cpu_gpu_benchmark.py  kernel_methods_benchmark.py
kernelboost/: __init__.py  backend.py  booster.py  cpu_functions.py  estimator.py  feature_selection.py  gpu_functions.py  kernels.c  kernels.cu  mi_bins.c  multiclassbooster.py  objectives.py  optimizer.py  rho_optimizer.py  tree.py  utilities.py
