[build-system]
requires = ["setuptools>=61.0,<69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelboost"
version = "0.1.0"
description = "Gradient boosting with kernel regression base learners"
readme = "PYPI_README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "tlaiho", email = "tslaiho@gmail.com"}]
keywords = ["gradient-boosting", "kernel-regression", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26.4",
]

[project.optional-dependencies]
gpu = [
    "cupy>=11.0.0",
]
all = [
    "cupy>=11.0.0",
]

[project.urls]
Repository = "https://github.com/tlaiho/kernelboost"

[tool.setuptools.packages.find]
where = ["."]
include = ["kernelboost"]
exclude = ["kernelboost._extras"]

[tool.setuptools.package-data]
kernelboost = ["*.so", "*.dll", "*.a", "*.c", "*.cu"]
